# antigravity_glm_mcp

./: .gitignore  AGENTS.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
demo/: .gitignore  calculator.html  config_suggestion.json  glm_settings.cfg  say_hello.py  test_connection.py  test_glm_api.py  test_tool_verify.md  todo.md
demo/.glm_backups/: test_connection.py.20260201_193341.1.bak  test_connection.py.20260201_193347.2.bak  todo.md.20260201_193358.1.bak
demo/demo/data/memory/: test.json  test_verification.json
docs/: ARCHITECTURE.md  PRD.md  QUICKSTART.md  TOOLS.md
scripts/: install.py
src/: models.py  server.py
src/core/: backup.py  config.py  glm_client.py  glm_executor.py  sandbox.py
src/tools/: ask_glm.py  code_ops.py  db_ops.py  dir_ops.py  file_ops.py  git_ops.py  glm_cmd.py  grep_ops.py  http_ops.py  image_ops.py  memory_ops.py  reporting.py  schedule_ops.py  shell_ops.py  web_ops.py
tests/: env_check.py  local_tools_test.py  simple_test.py
tests/core/: test_backup.py  test_glm_client.py  test_glm_executor.py  test_sandbox.py
tests/tools/: test_extended_tools.py  test_file_ops.py  test_memory_ops.py
